--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Ciao utente!</h1>
+    <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
 
     <div>
         <label for="km-percorsi">Inserisci i km che vuoi percorrere:</label>
