--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+    <div class="container">
+        <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
 
-    <div>
+    <div class="form">
         <label for="km-percorsi">Inserisci i km che vuoi percorrere:</label>
         <input type="number" id="km-percorsi" min="1" max="1500">
 
@@ -22,6 +23,7 @@
 
     <h2 id="result"></h2>
 
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
