--- a/index-var.html
+++ b/index-var.html
@@ -20,21 +20,23 @@
         <section class="ms_calcola p-5 rounded-4">
             <form class="row gx-3 gy-2 align-items-center">
                 <div class="col-4">
-                    <label for="specificSizeInputName">Nome Cognome</label>
-                    <input type="text" class="form-control" id="specificSizeInputName" />
+                    <label for="nome-passeggero">Nome Cognome</label>
+                    <input type="text" class="form-control" id="nome-passeggero" />
                 </div>
                 <div class="col-4">
                     <label for="km-percorsi">Km da percorrere</label>
                     <input type="number" class="form-control" id="km-percorsi" min="1" max="1500" />
                 </div>
                 <div class="col-4">
-                    <label for="specificSizeSelect">Fascia d'età</label>
-                    <select class="form-select" id="specificSizeSelect">
-                        <option selected="">Seleziona...</option>
+                    <label for="eta-passeggero">Fascia d'età</label>
+                    <select class="form-select" id="eta-passeggero">
+                        <option value="0" selected="">Seleziona...</option>
                         <option value="1">Maggiorenne</option>
                         <option value="2">Minorenne</option>
                     </select>
                 </div>
+                <p id="errore" class="col-12 text-center">
+                </p>
                 <div class="col-12 mt-5 text-center">
                     <button id="submit-btn" type="submit" class="btn btn-primary me-3">Genera</button>
                     <button id="annulla" type="submit" class="btn btn-primary">Annulla</button>
@@ -48,7 +50,7 @@
             <div class="ms_dettagli-container d-flex justify-content-between">
                 <div class="passeggero">
                     <h5>NOME PASSEGGERO</h5>
-                    <p id="passeggero"></p>
+                    <p id="pass"></p>
                 </div>
                 <div class="offerta">
                     <h5>Offerta</h5>
